# rust-backend-base

./: .env.example  Cargo.toml  Dockerfile  Jenkinsfile  LICENSE  README.md  deploy.sh  docker-compose.yml
k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  postgres.yaml  redis.yaml  secret.yaml  service.yaml  valkey.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
k8s/overlays/staging/: kustomization.yaml
migrations/: 20240101000000_create_users_table.sql
scripts/: app-deploy.sh
src/: lib.rs  main.rs
src/auth/: jwt.rs  password.rs
src/config/: mod.rs
src/db/: mod.rs  postgres.rs  redis.rs
src/errors/: mod.rs
src/middleware/: auth.rs  mod.rs
src/models/: user.rs
src/routes/: mod.rs
src/routes/handlers/: auth_handler.rs  health_handler.rs  hello_handler.rs  mod.rs  user_handler.rs
src/services/: user_service.rs
tests/: hello_test.rs
